--- a/src/plugins/camera-tilt/public/webcomponents/orov-servo-tilt.html
+++ b/src/plugins/camera-tilt/public/webcomponents/orov-servo-tilt.html
@@ -41,7 +41,7 @@
         ready: function () {
           this.$.servoTiltImage.style['background-image'] = this.imgSrc;
         },
-        registerEmitterHanlders: function(emitter){
+        registerEmitterHandlers: function(emitter){
           var self = this;
           emitter.withHistory.on('plugin.cameraTilt.angle',function(angle){
             self.servoAngle = angle;
