--- a/src/plugins/controllerboard2x/public/webcomponents/orov-battery-status.html
+++ b/src/plugins/controllerboard2x/public/webcomponents/orov-battery-status.html
@@ -57,7 +57,7 @@
 
           return 'level'+(indicatorWidth);
         },
-        registerEmitterHanlders: function(emitter) {
+        registerEmitterHandlers: function(emitter) {
           var self = this;
 
           emitter.on('plugin.controllerboard2x.systemPower.update', function(data){
