--- a/src/plugins/example/public/webcomponents/example.html
+++ b/src/plugins/example/public/webcomponents/example.html
@@ -31,7 +31,7 @@
         },
 
         //This function is called by the oROVStandard behavior
-        registerEmitterHanlders: function(emitter){
+        registerEmitterHandlers: function(emitter){
           var self = this;
 
           //For subscribing to changes on state information
