--- a/src/plugins/gps/public/webcomponents/orov-map.html
+++ b/src/plugins/gps/public/webcomponents/orov-map.html
@@ -107,7 +107,7 @@
 			{				
 			},
 
-			registerEmitterHanlders: function(emitter) 
+			registerEmitterHandlers: function(emitter) 
 			{
 				var self = this;
 
