--- a/src/plugins/host-diagnostics/public/webcomponents/events-graph.html
+++ b/src/plugins/host-diagnostics/public/webcomponents/events-graph.html
@@ -28,7 +28,7 @@
         properties:{
         },
         behaviors: [namespace('behaviors').oROVStandard],
-        registerEmitterHanlders: function(emitter){
+        registerEmitterHandlers: function(emitter){
           var self = this;
           emitter.on('plugin.host-diagnostics.event-counts',function(data){
             self.logStatusData(data);
