--- a/src/plugins/internet-stream/public/webcomponents/orov-twitch-stream-status.html
+++ b/src/plugins/internet-stream/public/webcomponents/orov-twitch-stream-status.html
@@ -56,7 +56,7 @@
           streaming:{type:Boolean,value:false}
         },
         behaviors: [namespace('behaviors').oROVStandard,namespace('behaviors').oROVTwitchStreamStatus],
-        registerEmitterHanlders: function(emitter){
+        registerEmitterHandlers: function(emitter){
           var self=this;
           emitter.withHistory.on('internet-stream-status',function(status){
             self.set('streaming',status.isStreaming);
