--- a/src/plugins/mobile-ui/public/webcomponents/orov-mobile-controls.html
+++ b/src/plugins/mobile-ui/public/webcomponents/orov-mobile-controls.html
@@ -33,7 +33,7 @@
 		            dualThumbstick.addEventListener('rightTrackY', this.handleVertical.bind( this ) );
 				},
 
-				registerEmitterHanlders: function(emitter)
+				registerEmitterHandlers: function(emitter)
 				{
 				},
 
