--- a/src/plugins/mobile-ui/public/webcomponents/orov-mobile-depth/orov-mobile-depth.html
+++ b/src/plugins/mobile-ui/public/webcomponents/orov-mobile-depth/orov-mobile-depth.html
@@ -34,7 +34,7 @@
 
 			behaviors: [namespace('behaviors').oROVStandard],
 
-      registerEmitterHanlders: function(emitter)
+      registerEmitterHandlers: function(emitter)
       {
         var self = this;
 
