--- a/src/plugins/mobile-ui/public/webcomponents/settings-menu/settings-menu.html
+++ b/src/plugins/mobile-ui/public/webcomponents/settings-menu/settings-menu.html
@@ -95,7 +95,7 @@
 					}
 				},
 				
-				registerEmitterHanlders: function(emitter){
+				registerEmitterHandlers: function(emitter){
 						var self=this;
              emitter.withHistory.on('plugin-blackbox-recording-status', function(recording){
 							 if(recording){
