--- a/src/plugins/navigation-data/public/webcomponents/topdowncompass.html
+++ b/src/plugins/navigation-data/public/webcomponents/topdowncompass.html
@@ -47,7 +47,7 @@
       Polymer({
         is: 'orov-topdowncompass',
         behaviors: [namespace('behaviors').oROVStandard],
-        registerEmitterHanlders: function(emitter){
+        registerEmitterHandlers: function(emitter){
           var self = this;
           emitter.on('plugin.navigationData.data',function(data){
             self.moveTo(data.heading);
