--- a/src/plugins/new-ui/public/webcomponents/switches.html
+++ b/src/plugins/new-ui/public/webcomponents/switches.html
@@ -236,7 +236,7 @@
           }
         },
         behaviors: [namespace('behaviors').oROVStandard],
-        registerEmitterHanlders: function(emitter) {
+        registerEmitterHandlers: function(emitter) {
           var self = this;
           var container = $(this.$.switchesContainer);
           this.$.switchesContainer.innerHTML='';
