--- a/src/plugins/peer-view/public/webcomponents/orov-mc-assignments.html
+++ b/src/plugins/peer-view/public/webcomponents/orov-mc-assignments.html
@@ -44,7 +44,7 @@
             'updateViewers(viewers.splice)'
         ],        
         behaviors: [namespace('behaviors').oROVStandard,namespace('behaviors').oROVMCStatusIndicator],
-        registerEmitterHanlders: function(emitter){
+        registerEmitterHandlers: function(emitter){
           var self=this;
 
         },
