--- a/src/plugins/rovpilot/public/webcomponents/orov-thrustfactor.html
+++ b/src/plugins/rovpilot/public/webcomponents/orov-thrustfactor.html
@@ -36,7 +36,7 @@
           displayLabel: {type:Boolean, value:false}
         },
         behaviors: [namespace('behaviors').oROVStandard],
-        registerEmitterHanlders: function(emitter){
+        registerEmitterHandlers: function(emitter){
           var self = this;
           emitter.on('plugin.rovpilot.setPowerLevel',function(level){
             self.thrustFactor = level;
