--- a/src/plugins/telemetry/public/webcomponents/orov-telemetry-monitor.html
+++ b/src/plugins/telemetry/public/webcomponents/orov-telemetry-monitor.html
@@ -114,7 +114,7 @@
           define: {type: Object}
         },
         behaviors: [namespace('behaviors').oROVStandard],
-        registerEmitterHanlders: function(emitter){
+        registerEmitterHandlers: function(emitter){
           var self = this;
           emitter.on('status',function(status){
             self.logStatusData(status);
