--- a/src/plugins/video/public/webcomponents/orov-video.html
+++ b/src/plugins/video/public/webcomponents/orov-video.html
@@ -56,7 +56,7 @@
 					}
 				},
         packetVideo_initializationInProgress: false,
-        registerEmitterHanlders: function(emitter){
+        registerEmitterHandlers: function(emitter){
           var self = this;
 					self.emitter = emitter;
           this.shortCircuit=false;
