--- a/src/static/webcomponents/orov-behaviors/test/orov-emitter-behavior.html
+++ b/src/static/webcomponents/orov-behaviors/test/orov-emitter-behavior.html
@@ -34,7 +34,7 @@
         var behaviors = namespace('behaviors');
         assert.isDefined(behaviors.oROVStandardImpl);
       });
-      test('behavior calls registerEmitterHanlders on the element',function(){
+      test('behavior calls registerEmitterHandlers on the element',function(){
         assert.isOk(myEl._registerEmitterHandlersCalled);
       });
       test('the event emitter can be accessed',function(){
