--- a/src/system-plugins/cloud-profile/public/webcomponents/orov-login.html
+++ b/src/system-plugins/cloud-profile/public/webcomponents/orov-login.html
@@ -34,7 +34,7 @@
         displayLoggedIn: function(){
           return !this.loggedIn;
         },
-        registerEmitterHanlders: function(emitter){
+        registerEmitterHandlers: function(emitter){
           //Required so that the underlying behavior and also register emitter events
         }
       })
