--- a/src/system-plugins/input-controller/public/webcomponents/orov-inputs-list.html
+++ b/src/system-plugins/input-controller/public/webcomponents/orov-inputs-list.html
@@ -44,7 +44,7 @@
             });
           }
         },
-        registerEmitterHanlders: function(emitter){
+        registerEmitterHandlers: function(emitter){
           var self = this;
           emitter.on('InputController.registeredCommand',function(command){
             self.push('commands',command);
