--- a/src/system-plugins/plugin-finder/public/webcomponents/orov-plugin-finder.html
+++ b/src/system-plugins/plugin-finder/public/webcomponents/orov-plugin-finder.html
@@ -63,7 +63,7 @@
         //  console.dir(e);
           this._queryChanged(e.srcElement.value,null);
         },
-        registerEmitterHanlders: function(emitter){
+        registerEmitterHandlers: function(emitter){
           var self = this;
 //          emitter.on('plugin.cameraTilt.angle',function(angle){
 //            self.servoAngle = angle;
