--- a/src/system-plugins/plugin-manager/public/webcomponents/orov-plugin-manager.html
+++ b/src/system-plugins/plugin-manager/public/webcomponents/orov-plugin-manager.html
@@ -35,7 +35,7 @@
             });
           }
         },
-        registerEmitterHanlders: function(emitter){
+        registerEmitterHandlers: function(emitter){
           var self = this;
           emitter.on('plugin-manager.ControllablePluginsChanged',function(p){
             self.controlablePlugins = p;
