--- a/src/system-plugins/software-update-alert/public/webcomponents/orov-software-version.html
+++ b/src/system-plugins/software-update-alert/public/webcomponents/orov-software-version.html
@@ -70,7 +70,7 @@
             });
           }
         },
-        registerEmitterHanlders: function(emitter){
+        registerEmitterHandlers: function(emitter){
           var self = this;
 //          emitter.on('plugin.cameraTilt.angle',function(angle){
 //            self.servoAngle = angle;
