--- a/src/plugins/blackbox/public/webcomponents/orov-blackbox.html
+++ b/src/plugins/blackbox/public/webcomponents/orov-blackbox.html
@@ -37,7 +37,7 @@
           session: {type: String}
         },
         behaviors: [namespace('behaviors').oROVStandard],
-        registerEmitterHanlders: function(emitter){
+        registerEmitterHandlers: function(emitter){
           var self=this;
           emitter.withHistory.on('plugin-blackbox-sessions',function(sessions){
             self.sessions = sessions;
