--- a/src/plugins/connection-health/public/webcomponents/orov-ping-graph.html
+++ b/src/plugins/connection-health/public/webcomponents/orov-ping-graph.html
@@ -49,7 +49,7 @@
               console.log("Imported grapp");
           });
         },
-        registerEmitterHanlders: function(emitter){
+        registerEmitterHandlers: function(emitter){
           var self = this;
           emitter.on('plugin.connection-health.ping-latency',function(ms){
             self.pingTime = ms;
