--- a/src/plugins/controllerboard2x/public/webcomponents/orov-power-behavior.html
+++ b/src/plugins/controllerboard2x/public/webcomponents/orov-power-behavior.html
@@ -92,9 +92,9 @@
           this.setportBattery(this.portCurrent);
           this.setstarboardBattery(this.starboardCurrent);
 
-          if(typeof(this.registerEmitterHanlders)=='function'){
-            var org = this.registerEmitterHanlders;
-            this.registerEmitterHanlders=function(emitter){
+          if(typeof(this.registerEmitterHandlers)=='function'){
+            var org = this.registerEmitterHandlers;
+            this.registerEmitterHandlers=function(emitter){
               self.registerBaseEmitterHanlders(emitter);
               org(emitter);
             };
