--- a/src/plugins/engineering-panel/public/webcomponents/orov-engineering-button.html
+++ b/src/plugins/engineering-panel/public/webcomponents/orov-engineering-button.html
@@ -228,7 +228,7 @@
           }
         },
         behaviors: [namespace('behaviors').oROVStandard],
-        registerEmitterHanlders: function(emitter) {
+        registerEmitterHandlers: function(emitter) {
           var self = this;
           var container = $(this.$.switchesContainer);
           this.$.switchesContainer.innerHTML='';
