--- a/src/plugins/engineering-panel/public/webcomponents/orov-engineering-chart.html
+++ b/src/plugins/engineering-panel/public/webcomponents/orov-engineering-chart.html
@@ -71,7 +71,7 @@
 				data: Array,
 			},
 			behaviors: [namespace('behaviors').oROVStandard],
-			registerEmitterHanlders: function(emitter) {
+			registerEmitterHandlers: function(emitter) {
 				var self = this;
 				emitter.on('plugin.engineering.data', function(data) {
 					if(data[self.type]){
