--- a/src/plugins/geomuxp/public/webcomponents/orov-geomux.html
+++ b/src/plugins/geomuxp/public/webcomponents/orov-geomux.html
@@ -63,7 +63,7 @@
 	  
       behaviors: [namespace('behaviors').oROVStandard],
 	  
-      registerEmitterHanlders: function(emitter) 
+      registerEmitterHandlers: function(emitter) 
 			{
 					var self = this;
 			
