--- a/src/plugins/gps/public/webcomponents/orov-map2.html
+++ b/src/plugins/gps/public/webcomponents/orov-map2.html
@@ -47,7 +47,7 @@
 
 			behaviors: [namespace('behaviors').oROVStandard],
 
-			registerEmitterHanlders: function(emitter) 
+			registerEmitterHandlers: function(emitter) 
 			{
 				var self = this;
 
