--- a/src/plugins/internet-control/public/webcomponents/orov-internetControl-status.html
+++ b/src/plugins/internet-control/public/webcomponents/orov-internetControl-status.html
@@ -35,7 +35,7 @@
           status: {type: Object, value: {status:'off',stats:{viewers:0,pilots:0},pilots:{}}, observer: '_statusChanged'}
         },
         behaviors: [namespace('behaviors').oROVStandard],
-        registerEmitterHanlders: function(emitter){
+        registerEmitterHandlers: function(emitter){
           var self = this;
           emitter.on('plugin-internetControl-status',function(status){
             self.status = status;
