--- a/src/plugins/local-media-hardware/public/webcomponents/orov-internetControl-toggle.html
+++ b/src/plugins/local-media-hardware/public/webcomponents/orov-internetControl-toggle.html
@@ -26,7 +26,7 @@
           format: {type: String, value: 'csv'}
         },
         behaviors: [namespace('behaviors').oROVStandard],
-        registerEmitterHanlders: function(emitter){
+        registerEmitterHandlers: function(emitter){
         },
         start: function(){
           if(this.eventEmitter !== undefined){
