--- a/src/plugins/mobile-ui/public/webcomponents/orov-mobile-battery/orov-mobile-battery.html
+++ b/src/plugins/mobile-ui/public/webcomponents/orov-mobile-battery/orov-mobile-battery.html
@@ -33,7 +33,7 @@
 
 			behaviors: [namespace('behaviors').oROVStandard],
 
-      registerEmitterHanlders: function(emitter)
+      registerEmitterHandlers: function(emitter)
       {
         var self = this;
 
