--- a/src/plugins/mobile-ui/public/webcomponents/orov-mobile-compass/orov-mobile-compass.html
+++ b/src/plugins/mobile-ui/public/webcomponents/orov-mobile-compass/orov-mobile-compass.html
@@ -102,7 +102,7 @@
         }
       },
       behaviors: [namespace('behaviors').oROVStandard],
-      registerEmitterHanlders: function(emitter) {
+      registerEmitterHandlers: function(emitter) {
         var self = this;
         emitter.withHistory.on('plugin.rovpilot.headingHold.state', function(state) {
           if (state.enabled){
