--- a/src/plugins/new-ui/public/webcomponents/compass.html
+++ b/src/plugins/new-ui/public/webcomponents/compass.html
@@ -104,7 +104,7 @@
         }
       },
       behaviors: [namespace('behaviors').oROVStandard],
-      registerEmitterHanlders: function(emitter) {
+      registerEmitterHandlers: function(emitter) {
         var self = this;
         emitter.withHistory.on('plugin.rovpilot.headingHold.state', function(state) {
           if (state.enabled){
