--- a/src/plugins/new-ui/public/webcomponents/power.html
+++ b/src/plugins/new-ui/public/webcomponents/power.html
@@ -162,7 +162,7 @@
           }
         },
         behaviors: [namespace('behaviors').oROVStandard],
-        registerEmitterHanlders: function(emitter) {
+        registerEmitterHandlers: function(emitter) {
           var self = this;
 
           emitter.on('plugin.controllerboard2x.systemPower.update', function(data){
