--- a/src/plugins/peer-view/public/webcomponents/orov-mc-status-indicator.html
+++ b/src/plugins/peer-view/public/webcomponents/orov-mc-status-indicator.html
@@ -31,7 +31,7 @@
 
         },
         behaviors: [namespace('behaviors').oROVStandard,namespace('behaviors').oROVMCStatusIndicator],
-        registerEmitterHanlders: function(emitter){
+        registerEmitterHandlers: function(emitter){
           var self=this;
 
         }
