--- a/src/plugins/rovpilot-wire/public/webcomponents/orov-depthHold.html
+++ b/src/plugins/rovpilot-wire/public/webcomponents/orov-depthHold.html
@@ -44,7 +44,7 @@
           targetDepth:{type: Number}
         },
         behaviors: [namespace('behaviors').oROVStandard],
-        registerEmitterHanlders: function(emitter){
+        registerEmitterHandlers: function(emitter){
           var self = this;
           emitter.withHistory.on('plugin.rovpilot.depthHold.state',function(state){
             self.depthHoldEnabled=state.enabled;
