--- a/src/system-plugins/ui-manager/public/webcomponents/orov-appletswitcher-behavior.html
+++ b/src/system-plugins/ui-manager/public/webcomponents/orov-appletswitcher-behavior.html
@@ -13,9 +13,9 @@
     behaviors: [namespace('behaviors').oROVStandard],
     attached: function(){
       var self=this;
-      if(typeof(this.registerEmitterHanlders)=='function'){
-        var org = this.registerEmitterHanlders;
-        this.registerEmitterHanlders=function(emitter){
+      if(typeof(this.registerEmitterHandlers)=='function'){
+        var org = this.registerEmitterHandlers;
+        this.registerEmitterHandlers=function(emitter){
           self.registerBaseEmitterHanlders(emitter);
           org(emitter);
         };
