--- a/src/plugins/new-ui/public/webcomponents/switches.html
+++ b/src/plugins/new-ui/public/webcomponents/switches.html
@@ -157,11 +157,20 @@
                   events: [
                     {message:'plugin.externalLights.level',fn: function(lightNum, level){ if( lightNum == 0){ return level > 0; } else{ return null; } }}
                   ],
-                  switch: function (state) {
-                    if (self.eventEmitter !== undefined){
-                      var level = 1;
-                      if (state==true) level = 0;
-                      self.eventEmitter.emit('plugin.externalLights.set', 0, level);
+                  switch: function (state) 
+                  {
+                    if (self.eventEmitter !== undefined)
+                    {
+                      if( state == true )
+                      {
+                        // Turn off
+                        self.eventEmitter.emit('plugin.externalLights.setOnOff', 0, false );
+                      }
+                      else
+                      {
+                        // Turn on to max
+                        self.eventEmitter.emit('plugin.externalLights.setOnOff', 0, true );
+                      }
                     }
                   }
                 },
@@ -172,11 +181,20 @@
                   events: [
                     {message:'plugin.externalLights.level',fn: function(lightNum, level){if( lightNum == 1){ return level > 0; } else{ return null; } } }
                   ],
-                  switch: function (state) {
-                    if (self.eventEmitter !== undefined){
-                      var level = 1;
-                      if (state==true) level = 0;
-                      self.eventEmitter.emit('plugin.externalLights.set', 1, level);
+                  switch: function (state) 
+                  {
+                    if (self.eventEmitter !== undefined)
+                    {
+                      if( state == true )
+                      {
+                        // Turn off
+                        self.eventEmitter.emit('plugin.externalLights.setOnOff', 1, false );
+                      }
+                      else
+                      {
+                        // Turn on to max
+                        self.eventEmitter.emit('plugin.externalLights.setOnOff', 1, true );
+                      }
                     }
                   }
                 },
