--- a/src/plugins/new-ui/public/webcomponents/switches.html
+++ b/src/plugins/new-ui/public/webcomponents/switches.html
@@ -140,14 +140,20 @@
                   state: false,
                   description: 'LED lights on/off',
                   events: [
-                    {message:'plugin.lights.state',fn: function(state){return state.level>0;}}
+                    {message:'plugin.lights.level',fn: function(level){return level > 0; }}
                   ],
-                  switch: function (state) {
-                    if (self.eventEmitter !== undefined){
-                      var level = 1;
-                      if (state==true) level = 0;
-                      self.eventEmitter.emit('plugin.lights.set',level);
-                    }
+                  switch: function (state) 
+                  {
+                   if( state == true )
+                      {
+                        // Turn off
+                        self.eventEmitter.emit('plugin.lights.setOnOff', false );
+                      }
+                      else
+                      {
+                        // Turn on to max
+                        self.eventEmitter.emit('plugin.lights.setOnOff', true );
+                      }
                   }
                 },
                 XL0: {
