--- a/src/plugins/engineering-panel/public/webcomponents/orov-engineering-chart.html
+++ b/src/plugins/engineering-panel/public/webcomponents/orov-engineering-chart.html
@@ -117,8 +117,9 @@
 
 			},
 
-			ready: function() {
-
+			attached: function() {
+				//TODO: This references a global d3 object, so it should have code that creates the imports the 
+				//script and checks to make sure it is available before running.
 				if(!this.data) this.data = [];
 
 				this.elem = this.$.chart;
