--- a/src/plugins/geomuxp/public/webcomponents/orov-geomux.html
+++ b/src/plugins/geomuxp/public/webcomponents/orov-geomux.html
@@ -1,8 +1,8 @@
-<link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../paper-slider/paper-slider.html">
 <link rel="import" href="../paper-toggle-button/paper-toggle-button.html">
 <link rel="import" href="../paper-button/paper-button.html">
-<link rel="import" href="../../orov-behaviors/orov-behavior.html">
+<link rel="import" href="../orov-behaviors/orov-behavior.html">
 
 <dom-module id="orov-geomux">
   <style>
