Working widget in new

--- a/src/plugins/peer-view/public/webcomponents/orov-mc-status-indicator.html
+++ b/src/plugins/peer-view/public/webcomponents/orov-mc-status-indicator.html
@@ -28,7 +28,7 @@
       Polymer({
         is: "orov-mc-status-indicator",
         properties: {
-
+          defaultPanel:{type:String,value:"warning-display"}
         },
         behaviors: [namespace('behaviors').oROVStandard,namespace('behaviors').oROVMCStatusIndicator],
         registerEmitterHandlers: function(emitter){
