--- a/src/plugins/blackbox/public/webcomponents/orov-blackbox-status.html
+++ b/src/plugins/blackbox/public/webcomponents/orov-blackbox-status.html
@@ -25,7 +25,8 @@
       Polymer({
         is: "orov-blackbox-status",
         properties: {
-          status: {type: Boolean, value: false, observer: '_statusChanged'}
+          status: {type: Boolean, value: false, observer: '_statusChanged'},
+          defaultPanel:{type:String,value:"warning-display"}
         },
         behaviors: [namespace('behaviors').oROVStandard],
         registerEmitterHandlers: function(emitter){
