--- a/src/plugins/camera-tilt/public/webcomponents/orov-servo-tilt.html
+++ b/src/plugins/camera-tilt/public/webcomponents/orov-servo-tilt.html
@@ -20,6 +20,7 @@
       Polymer({
         is: "orov-servo-tilt",
         properties: {
+          defaultPanel:{type:String,value:"warning-display"},
           servoAngle: {
             type: Number,
             value: 0,
